<resources>
    <string name="app_name">CS 310 Andrea Lee</string>
    <string name="clock">\uD83D\uDD53</string>
    <string name="flag">\uD83D\uDEA9</string>
    <string name="mine">\uD83D\uDCA3</string>
    <string name="pick">\u26CF</string>
    <string name="time_count">00</string>
    <string name="flag_count">4</string>
    <string name="bomb">\\uD83D\\uDCA3</string>
    <string name="finale_time_count">Used</string>
    <string name="final_game_result">You Won!</string>
    <string name="good_job">Good Job!</string>
    <string name="play_again">PLAY AGAIN</string>
</resources>