<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".GameFinished">
    <LinearLayout
        android:id="@+id/GameCount"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="250dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/final_time_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finale_time_count"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/final_game_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/final_game_result"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/good_job"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_job"
            android:textSize="32sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/button_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="sendMessage"
        android:text="@string/play_again"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/GameCount"
        app:layout_constraintVertical_bias="0.75" />

</androidx.constraintlayout.widget.ConstraintLayout>