<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/GameCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/gridLayout01"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/activity_main_flag_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/flag"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/activity_main_flag_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="@string/flag_count"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/activity_main_clock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/clock"
            android:textSize="32sp"/>
        <TextView
            android:id="@+id/activity_main_time_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:text="@string/time_count"
            android:textSize="32sp"/>
    </LinearLayout>

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridLayout01"
        android:layout_width="275dp"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        app:columnCount="8"
        app:rowCount="10"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346" />

    <TextView
        android:id="@+id/activity_main_flag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flag"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridLayout01"
        app:layout_constraintVertical_bias="-.00" />

</androidx.constraintlayout.widget.ConstraintLayout>